--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -16,7 +16,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: black;
+  background:#2A2C2F;
   opacity: .5;
   z-index: 2;
   transition: opacity 1s;
