--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,3 +1,10 @@
 .photo-grid__item {
   width: 100%;
+  justify-self: center;
+}
+@media screen and (max-width: 768px) {
+  .photo-grid__item {
+    width: 100%;
+    max-height: 264px;
+  }
 }
