--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,6 +1,6 @@
 .cover__title {
   max-width: 560px;
-  font-style: Black;
+  font-style: normal;
   font-size: 72px;
   line-height: 76px;
   font-weight: 900;
@@ -13,7 +13,7 @@
 }
 @media screen and (max-width: 500px) {
   .cover__title {
-    font-style: Black;
+    font-style: normal;
     font-size: 32px;
     line-height: 35px;
     max-width: 240px;
