--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,10 +1,10 @@
 .footer__copyright {
   align-self: flex-end;
-  margin: 0 24px 24px 16px;
+  margin: 0 16px  24px 0;
   font-size: 14px;
   line-height: 16px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .footer__copyright {
     align-self: flex-start;
     margin: 48px 0 24px 16px;
