--- a/blocks/footer/__nav/footer__nav.css
+++ b/blocks/footer/__nav/footer__nav.css
@@ -1,8 +1,13 @@
 .footer__nav {
-  margin: 92px 0 24px 24px;
+  margin: 92px 0 24px 0;
 }
-@media screen and (max-width: 425px){
+@media screen and (max-width: 1024px){
   .footer__nav {
-    margin: 92px 0 0 16px;
+    margin: 92px 0 24px 16px;
   }
+}
+@media screen and (max-width: 768px){
+  /* .footer__nav {
+    margin: 92px 0 0 16px;
+  } */
 }
