--- a/blocks/header/__lang/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang/__lang-link/header__lang-link.css
@@ -3,9 +3,12 @@
   color: white;
   font-size: 24px;
   line-height: 28px;
-  margin: 0 0 0 18px;
+  margin: 0 0 0 14px;
 }
-@media screen and  (max-width: 425px) {
+.header__lang-link:hover {
+  opacity: .8;
+}
+@media screen and  (max-width: 450px) {
   .header__lang-link {
     font-size: 18px;
     line-height: 24px;
