--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,9 +5,14 @@
 .header {
   display: flex;
   justify-content: space-between;
-  overflow: hidden;
   padding: 28px 0 0 0;
-  margin: 0px 4%;
+  margin: 0px auto;
+  max-width: 1280px;
+}
+@media screen and (max-width: 1280px) {
+  .header {
+    margin: 0px 4%;
+  }
 }
 @media screen and (max-width: 425px) {
   .header {
