--- a/blocks/intro/__content/intro__content.css
+++ b/blocks/intro/__content/intro__content.css
@@ -1,16 +1,17 @@
 .intro__content {
-  margin: 40px 0 0 0;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 26px;
+  margin: 35px 0 0 0;
+  max-width: 690px;
 }
 @media screen and  (max-width: 1024px) {
   .intro__content {
-    margin: 40px 24px 0 24px;
+    margin: 33px 24px 0 27px;
   }
 }
-@media screen and  (max-width: 425px) {
+@media screen and  (max-width: 450px) {
   .intro__content {
     margin: 40px 16px 0 16px;
   }
