--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -5,7 +5,7 @@
 }
 @media screen and  (max-width: 1024px) {
   .intro__list {
-    margin: 32px  0 88px 24px;
+    margin: 34px 0 0 27px;
   }
 }
 @media screen and  (max-width: 425px) {
