--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -3,6 +3,7 @@
   font-weight: 900;
   font-size: 54px;
   line-height: 58px;
+  margin: 0;
 }
 @media screen and  (max-width: 1024px) {
   .intro__title {
@@ -11,7 +12,7 @@
     margin: 0 0 0 24px;
   }
 }
-@media screen and  (max-width: 425px) {
+@media screen and  (max-width: 450px) {
   .intro__title {
     font-size: 32px;
     line-height: 35px;
