--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -13,7 +13,12 @@
     line-height: 14px;
     letter-spacing: 0.15em;
     text-transform: uppercase;
-    margin: 8px 0 0 24px;
+    margin: 8px 0 0 0;
+  }
+}
+@media screen and  (max-width: 768px) {
+  .lead__caption {
+    margin: 0px 0 0 24px;
   }
 }
 @media screen and  (max-width: 425px) {
