--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,5 +1,18 @@
 .lead__image {
-  display: block;
-  max-width: 100%;
+  width: 100%;
+  min-height: 580px;
   margin: 64px auto 0 auto;
 }
+@media screen and (max-width: 1024px) {
+  .lead__image {
+    margin: 54px auto 0 auto;
+    min-height: 480px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .lead__image {
+    margin: 54px 0 0 0;
+    min-height: 300px;
+  }
+}
+
