--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,16 +1,19 @@
 .lead__subtitle {
-  width: 640px;
+  max-width: 640px;
   font-style: normal;
   font-weight: normal;
   font-size: 30px;
   line-height: 36px;
   text-align: center;
-  margin: 32px auto 0 auto;
+  margin: 26px auto 0 auto;
 }
-@media screen and  (max-width: 768px) {
+
+@media screen and  (max-width: 767px) {
   .lead__subtitle {
     width: 288px;
     font-size: 16px;
     line-height: 20px;
+
   }
 }
+
