--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -4,24 +4,26 @@
   max-width: 1184px;
   margin: 92px auto 0 auto;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-auto-rows: 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   gap: 16px;
 }
 @media screen and (max-width: 1280px) {
   .photo-grid {
-    grid-template-columns: 1fr 1fr 1fr;
-    margin: 92px 48px 0 48px;
+    margin: 92px 48px 0 0;
   }
 }
 @media screen and (max-width: 1024px) {
   .photo-grid {
-    /* grid-template-columns: 1fr 1fr; */
-    margin: 88px 24px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    margin: 100px 48px 0 48px;
   }
 }
 @media screen and (max-width: 768px) {
   .photo-grid {
     grid-template-columns: 1fr 1fr;
+    grid-auto-rows: auto;
+    margin: 90px 24px;
   }
 }
 @media screen and (max-width: 450px) {
