--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -11,13 +11,12 @@
 
 @media screen and (max-width: 768px) {
   .place__paragraph {
-    font-style: normal;
     font-weight: normal;
     font-size: 16px;
     line-height: 26px;
-    margin: 0 16px;
+    margin: 0 0px;
   }
   .place__paragraph:nth-of-type(2n) {
-    margin: 24px 16px 0 16px;
+    margin: 24px 0 0 0;
   }
 }
