--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -5,17 +5,20 @@
   line-height: 76px;
   margin: 0;
   align-self: center;
+  align-self: end;
 }
 @media screen and (max-width: 1024px) {
   .place__title {
-    font-size: 42px;
-    line-height: 46px;
+    /* font-size: 42px;
+    line-height: 46px; */
   }
 }
 @media screen and (max-width: 768px) {
   .place__title {
-    font-size: 32px;
+    /* font-size: 32px;
     line-height: 35px;
-    margin: 0 16px;
+    margin: 0 16px; */
+    font-size: 42px;
+    line-height: 46px;
   }
 }
