--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -6,18 +6,31 @@
 @import url(../place/__image/place__image.css);
 
 .place {
-  margin: 80px auto 0 auto;
+  margin: 0 auto 80px auto;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 3fr;
-  gap: 48px 40px;
+  grid-template-columns: 19fr 20fr;
+  grid-template-rows: auto auto;
+  gap: 50px 40px;
 }
-@media screen and (max-width: 1024px) {
+
+@media screen and (max-width: 768px) {
   .place {
-    margin: 72px 0 0 0;
+    grid-template-rows: 1fr 5fr;
+    grid-template-columns: 1fr 1fr;
+    margin: 48px 0 0 0;
+    gap: 20px 20px;
   }
 }
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 650px) {
+  .place {
+    grid-template-rows: auto;
+    grid-template-columns: 1fr;
+    margin: 48px 0 0 0;
+    gap: 20px 20px;
+  }
+}
+
+@media screen and (max-width: 450px) {
   .place {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 8fr;
