--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,16 +1,20 @@
 .places {
   max-width: 984px;
-  margin: 92px auto 0 auto;
+  margin: 100px auto 0 auto;
+}
+@media screen and (max-width: 1280px) {
+  .places {
+    margin: 100px auto 0 auto;
+  }
 }
 @media screen and (max-width: 1024px) {
   .places {
-    margin: 92px 4% 0 4%;
+    margin: 85px 48px 0 48px;
   }
 }
 @media screen and (max-width: 425px) {
   .places {
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 8fr;
     margin: 64px 0 0 0;
   }
 
