--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -9,13 +9,25 @@
   text-align: center;
   z-index: 3;
   margin: 0 auto;
-  padding: 20% 0 0 0;
+  padding: 21.5% 0 0 0;
 }
-@media screen and (max-width: 500px) {
-  .cover__title {
+@media screen and (max-width: 1024px) {
+  .cover__title{
+    padding: 19.5% 0 0 0;
+  }
+}
+@media screen and (max-width: 768px) {
+  .cover__title{
+    padding: 16% 0 0 0;
+  }
+}
+@media screen and (max-width: 450px) {
+  .cover__title{
+    max-width: 250px;
     font-style: normal;
     font-size: 32px;
     line-height: 35px;
-    max-width: 240px;
+    font-weight: 900;
+    padding: 12% 0 0 0;
   }
 }
