--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -5,15 +5,20 @@
   font-size: 30px;
   line-height: 36px;
   text-align: center;
-  margin: 26px auto 0 auto;
+  margin: 25px auto 0 auto;
 }
-
-@media screen and  (max-width: 767px) {
+@media screen and  (max-width: 680px) {
   .lead__subtitle {
-    width: 288px;
-    font-size: 16px;
-    line-height: 20px;
-
+    max-width: 80%;
+    font-size: 4.5vw;
+    line-height: 5vw;
   }
 }
-
+@media screen and  (max-width: 450px) {
+  .lead__subtitle {
+    max-width: 288px;
+    font-size: 16px;
+    line-height: 20px;
+    margin: 15px auto 0 auto;
+  }
+}
