--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -5,4 +5,22 @@
   max-width: 1184px;
   margin: 92px auto 0 auto;
 }
+@media screen and (max-width: 1024px) {
+  .cover {
+    max-width: 1024px;
+    margin: 92px auto 0 auto;
+  }
+}
+@media screen and (max-width: 768px) {
+  .cover {
+    max-width: 768px;
+    margin: 84px auto 0 auto;
+  }
+}
+@media screen and (max-width: 450px) {
+  .cover {
+    max-width: 450px;
+    margin: 64px auto 0 auto;
+  }
+}
 
