--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -4,11 +4,13 @@
   font-size: 14px;
   line-height: 16px;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 1024px) {
   .footer__copyright {
-    align-self: flex-start;
-    margin: 48px 0 24px 16px;
-    line-height: 14px;
+    margin: 0 0 24px 0;
   }
 }
-
+@media screen and  (max-width: 680px) {
+  .footer__copyright {
+    align-self: flex-start;
+  }
+}
