--- a/blocks/footer/__nav-link/footer__nav-link.css
+++ b/blocks/footer/__nav-link/footer__nav-link.css
@@ -4,14 +4,11 @@
   color: white;
   text-decoration: none;
 }
-.footer__nav-link:hover {
-  opacity: .8;
-}
-@media screen and (max-width: 767px){
-  .footer__nav-link {
-    margin: 32px 0 0 0;
+@media screen and (max-width: 450px) {
+  .footer__nav-link{
     font-size: 24px;
     line-height: 24px;
+    margin: 0 0 31px 0;
   }
 }
 
