--- a/blocks/footer/__nav/footer__nav.css
+++ b/blocks/footer/__nav/footer__nav.css
@@ -1,13 +1,8 @@
 .footer__nav {
   margin: 92px 0 24px 0;
 }
-@media screen and (max-width: 1024px){
+@media screen and (max-width: 450px) {
   .footer__nav {
-    margin: 92px 0 24px 16px;
+    margin: 65px 0 17px 0;
   }
-}
-@media screen and (max-width: 768px){
-  /* .footer__nav {
-    margin: 92px 0 0 16px;
-  } */
 }
