--- a/blocks/header/__lang/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang/__lang-link/header__lang-link.css
@@ -1,12 +1,7 @@
 .header__lang-link {
-  text-decoration: none;
   color: white;
-  font-size: 24px;
-  line-height: 28px;
-  margin: 0 0 0 14px;
-}
-.header__lang-link:hover {
-  opacity: .8;
+  margin-left: 12px;
+  text-decoration: none;
 }
 @media screen and  (max-width: 450px) {
   .header__lang-link {
