--- a/blocks/header/__lang/header__lang.css
+++ b/blocks/header/__lang/header__lang.css
@@ -1,5 +1,5 @@
-.header__lang{
-  display: flex;
-  margin: 18px 0 6px 0;
-  padding: 0;
+.header__lang {
+  font-size: 24px;
+  line-height: 28px;
+  align-self: flex-end;
 }
