--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -5,17 +5,15 @@
 .header {
   display: flex;
   justify-content: space-between;
-  padding: 28px 0 0 0;
-  margin: 0px auto;
-  max-width: 1280px;
+  padding: 0 48px;
 }
-@media screen and (max-width: 1280px) {
+@media screen and (max-width: 768px) {
   .header {
-    margin: 0px 4%;
+    padding: 0 22px;
   }
 }
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 450px) {
   .header {
-    padding: 16px 0 0 0;
+    padding: 0 15px 30px 15px;
   }
 }
