--- a/blocks/intro/__content/intro__content.css
+++ b/blocks/intro/__content/intro__content.css
@@ -1,18 +1,21 @@
 .intro__content {
+  max-width: 690px;;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 26px;
   margin: 35px 0 0 0;
-  max-width: 690px;
 }
-@media screen and  (max-width: 1024px) {
+@media screen and (max-width: 768px) {
   .intro__content {
-    margin: 33px 24px 0 27px;
+    margin: 33px 0 0 0;
   }
 }
-@media screen and  (max-width: 450px) {
+@media screen and (max-width: 450px) {
   .intro__content {
-    margin: 40px 16px 0 16px;
+    max-width: 420px;
+    font-size: 16px;
+    line-height: 26px;
+    margin: 34px 0 0 0;
   }
 }
