--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,15 +1,5 @@
 .intro__list {
   list-style: none;
   margin: 32px 0 0 0;
-  padding: 0 0 0 0;
-}
-@media screen and  (max-width: 1024px) {
-  .intro__list {
-    margin: 34px 0 0 27px;
-  }
-}
-@media screen and  (max-width: 425px) {
-  .intro__list {
-    margin: 32px  16px 64px 16px;
-  }
+  padding: 0;
 }
