--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -7,6 +7,24 @@
   max-width: 984px;
   margin: 95px  auto 0 auto;
 }
+@media screen and (max-width: 1024px) {
+  .intro {
+    max-width: 690px;
+    margin: 95px  0 0 45px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .intro {
+    max-width: 720px;
+    margin: 92px 0 0 24px;
+  }
+}
+@media screen and (max-width: 450px) {
+  .intro {
+    max-width: 420px;
+    margin: 67px 16px 0 16px;
+  }
+}
 
 
 
