--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,18 +1,15 @@
 .lead__image {
-  width: 100%;
-  min-height: 580px;
-  margin: 64px auto 0 auto;
+  max-width: 100%;
+  margin: 65px 0 0 0;
+  padding: 0;
 }
 @media screen and (max-width: 1024px) {
   .lead__image {
-    margin: 54px auto 0 auto;
-    min-height: 480px;
+    margin: 53px 0 0 0;
   }
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 450px) {
   .lead__image {
-    margin: 54px 0 0 0;
-    min-height: 300px;
+    margin: 40px 0 0 0;
   }
 }
-
