--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,10 +1,6 @@
 .photo-grid__item {
   width: 100%;
-  justify-self: center;
-}
-@media screen and (max-width: 768px) {
-  .photo-grid__item {
-    width: 100%;
-    max-height: 264px;
-  }
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
