--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,3 +1,23 @@
 .place__image {
-  width: 100%;
+  width: 460px;
+  height: 460px;
+}
+
+@media screen and (max-width: 1024px) {
+  .place__image {
+    width: 440px;
+    height: 440px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .place__image {
+    width: 340px;
+    height: 340px;
+  }
+}
+@media screen and (max-width: 450px) {
+  .place__image {
+    width: 100%;
+    height: 320px;
+  }
 }
