--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -8,15 +8,19 @@
 .place__paragraph:nth-of-type(2n) {
   margin: 24px 0 0 0;
 }
-
 @media screen and (max-width: 768px) {
   .place__paragraph {
-    font-weight: normal;
     font-size: 16px;
     line-height: 26px;
-    margin: 0 0px;
+  }
+}
+@media screen and (max-width: 450px) {
+  .place__paragraph {
+    font-size: 16px;
+    line-height: 26px;
+    margin: 0 16px 0 16px;
   }
   .place__paragraph:nth-of-type(2n) {
-    margin: 24px 0 0 0;
+    margin: 24px 16px 0 16px;
   }
 }
