--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -4,21 +4,20 @@
   font-size: 72px;
   line-height: 76px;
   margin: 0;
-  align-self: center;
   align-self: end;
-}
-@media screen and (max-width: 1024px) {
-  .place__title {
-    /* font-size: 42px;
-    line-height: 46px; */
-  }
 }
 @media screen and (max-width: 768px) {
   .place__title {
-    /* font-size: 32px;
-    line-height: 35px;
-    margin: 0 16px; */
     font-size: 42px;
     line-height: 46px;
+    padding-right: 10px;
+  }
+}
+@media screen and (max-width: 450px) {
+  .place__title {
+    font-size: 32px;
+    line-height: 35px;
+    margin: 0 0 0 16px;
+    padding: 0;
   }
 }
