--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -2,20 +2,22 @@
   max-width: 984px;
   margin: 100px auto 0 auto;
 }
-@media screen and (max-width: 1280px) {
-  .places {
-    margin: 100px auto 0 auto;
-  }
-}
 @media screen and (max-width: 1024px) {
   .places {
-    margin: 85px 48px 0 48px;
+    max-width: 928px;
+    margin: 100px 48px 0 48px;
   }
 }
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 768px) {
   .places {
-    grid-template-columns: 1fr;
-    margin: 64px 0 0 0;
+    max-width: 720px;
+    margin: 90px 24px 0 24px;
   }
-
+}
+@media screen and (max-width: 450px) {
+  .places {
+    max-width: 450px;
+    margin: 68px auto 0 auto;
+  }
+}
 }
